tests/ui/resolve/enums-pats-not-idents.rs
fn main() {
    let a(1) = 13; //~ ERROR cannot find tuple struct or tuple variant `a` in this scope
}

// ferrocene-annotations: fls_vlrto778v49m
// Tuple Struct Patterns
//
// ferrocene-annotations: fls_eexupzdsu7f
// Tuple Struct Pattern Matching
